# Synchro_boite_a_histoires

./: .gitignore  CHANGELOG.md  MACOS_RELEASE.md  README.md  build-macos.sh  lunii-app.py  lunii-bridge.py  package-lock.json
.claude/: CLAUDE.md
.github/workflows/: build.yml
mac-app-store/: .gitignore  MAC_APP_STORE.md  build-mac-app-store.sh  lunii-app-store.entitlements  lunii-bridge.py  package.json
mac-app-store/src/: index.html  main.js  styles.css
mac-app-store/src-tauri/: Cargo.toml  tauri.appstore.conf.json  tauri.conf.json
mac-app-store/src-tauri/capabilities/: default.json
mac-app-store/src-tauri/icons/: icon.icns
mac-app-store/src-tauri/src/: app_settings.rs  lunii_device.rs  lunii_sync.rs  main.rs  story_pack.rs  studio_story.rs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_settings.rs  lunii_device.rs  main.rs  storybox_device.rs
vault/: 00-brief.md  10-mailbox.md  20-decisions.md  30-discoveries.md  40-roadmap.md
