[package]
name        = "luniisync"
version     = "2.1.11"
edition     = "2021"
description = "LuniiSync V2 — Transfert audio vers Lunii"

[features]
default = []
mac-app-store = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
hex        = "0.4"
chrono     = { version = "0.4", features = ["serde"] }
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
open       = "5"
png        = "0.17"
uuid       = "1"
zip        = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
strip   = true
opt-level = "z"
lto     = true
